--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ h1 {
 
 .menu {
   position: absolute;
-  width: 25%;
+  width: 20%;
   height: 100%;
   background: #1976d2;
   color: #fff;
@@ -60,6 +60,7 @@ h1 {
   width: 100%;
   height: 100%;
   position: absolute;
+  transition: all 0.5s;
 }
 
 /**NAVIGATION BAR**/
@@ -88,8 +89,9 @@ h1 {
   color: #fff;
   font-family: 'Pacifico', cursive;
   margin-left: 10px;
+  font-size: 24px;
 }
 
 .swap {
-  transform: translateX(25%);
+  transform: translateX(20%);
 }
