--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ html {
 
 body {
   font-family: Lato, sans-serif;
-  margin: 0;
+  margin: auto;
 }
 
 /**HEADERS**/
@@ -94,4 +94,12 @@ h1 {
 
 .swap {
   transform: translateX(20%);
+}
+
+/** Body Elements **/
+.itemList li {
+  list-style: none;
+  background-color: #aabbee;
+  margin: 1px;
+  padding: 1px;
 }
